mock/crates/hilavitkutin-extensions-macros/tests/fixtures/fail/init_type_missing_impl.stderr
error[E0277]: the trait bound `NotAnInitHandler: InitHandler` is not satisfied
 --> tests/fixtures/fail/init_type_missing_impl.rs:7:27
  |
7 | #[export_extension(init = NotAnInitHandler)]
  |                           ^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `InitHandler` is not implemented for `NotAnInitHandler`
 --> tests/fixtures/fail/init_type_missing_impl.rs:5:1
  |
5 | pub struct NotAnInitHandler;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
